[feat] 新增达梦数据库支持

--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,7 @@
         <module>super-core-database-querydsl</module>
         <module>super-core-database-mysql</module>
         <module>super-core-database-postgresql</module>
+        <module>super-core-database-dameng</module>
         <module>super-core-database-mybatisplus-postgresql</module>
         <module>super-core-database-mybatisplus-mysql</module>
         <module>super-core-database-sharding-jdbc</module>
@@ -254,6 +255,7 @@
         <sharding-jdbc.version>4.0.0-RC2</sharding-jdbc.version>
         <p6spy.version>3.9.0</p6spy.version>
         <dynamic-datasource.version>3.2.1</dynamic-datasource.version>
+        <dameng.version>8.1.1.193</dameng.version>
         <!--<mysql-connector-java.version>5.1.47</mysql-connector-java.version>-->
 
         <!-- net -->
@@ -441,6 +443,12 @@
 
             <dependency>
                 <groupId>vip.isass</groupId>
+                <artifactId>super-core-database-dameng</artifactId>
+                <version>${super-core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>vip.isass</groupId>
                 <artifactId>super-core-database-mybatisplus</artifactId>
                 <version>${super-core.version}</version>
             </dependency>
@@ -577,6 +585,12 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
                 <version>${dynamic-datasource.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.dameng</groupId>
+                <artifactId>DmJdbcDriver18</artifactId>
+                <version>${dameng.version}</version>
             </dependency>
 
             <dependency>
