--- a/super-core-database-mybatisplus/pom.xml
+++ b/super-core-database-mybatisplus/pom.xml
@@ -187,6 +187,12 @@
         <dependency>
             <groupId>vip.isass</groupId>
             <artifactId>super-core</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>mybatis-plus-core</artifactId>
+                    <groupId>com.baomidou</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -217,6 +223,11 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
         </dependency>
     </dependencies>
 </project>
