--- a/kernel-net-core/pom.xml
+++ b/kernel-net-core/pom.xml
@@ -188,5 +188,10 @@
             <groupId>vip.isass</groupId>
             <artifactId>super-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
     </dependencies>
 </project>
