--- a/kernel-net-socketio/pom.xml
+++ b/kernel-net-socketio/pom.xml
@@ -193,5 +193,12 @@
             <groupId>com.corundumstudio.socketio</groupId>
             <artifactId>netty-socketio</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>${redisson.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
