--- a/kernel-net-core/pom.xml
+++ b/kernel-net-core/pom.xml
@@ -192,6 +192,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
