--- a/kernel-net-core/pom.xml
+++ b/kernel-net-core/pom.xml
@@ -194,5 +194,10 @@
             <artifactId>spring-data-redis</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+        </dependency>
     </dependencies>
 </project>
