refactor: 暂存 net 重构

--- a/kernel-net-proxy-client/pom.xml
+++ b/kernel-net-proxy-client/pom.xml
@@ -180,31 +180,18 @@
     </parent>
 
     <!-- 本项目信息 -->
-    <artifactId>kernel-net-socketio</artifactId>
+    <artifactId>kernel-net-proxy-client</artifactId>
     <version>super.3.3.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>vip.isass</groupId>
-            <artifactId>kernel-net-core</artifactId>
+            <artifactId>kernel-net-proxy-core</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.corundumstudio.socketio</groupId>
-            <artifactId>netty-socketio</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson</artifactId>
-            <version>${redisson.version}</version>
-            <scope>compile</scope>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 </project>
