--- a/kernel-net-proxy-core/pom.xml
+++ b/kernel-net-proxy-core/pom.xml
@@ -180,7 +180,7 @@
     </parent>
 
     <!-- 本项目信息 -->
-    <artifactId>kernel-net-socketio</artifactId>
+    <artifactId>kernel-net-proxy-core</artifactId>
     <version>super.3.3.1-SNAPSHOT</version>
 
     <dependencies>
@@ -190,21 +190,13 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <scope>compile</scope>
+            <groupId>vip.isass</groupId>
+            <artifactId>super-core-cache</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.corundumstudio.socketio</groupId>
-            <artifactId>netty-socketio</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson</artifactId>
-            <version>${redisson.version}</version>
-            <scope>compile</scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
         </dependency>
     </dependencies>
 </project>
