--- a/kernel-net-proxy-client/pom.xml
+++ b/kernel-net-proxy-client/pom.xml
@@ -193,5 +193,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
     </dependencies>
 </project>
