--- a/kernel-net-socketio/pom.xml
+++ b/kernel-net-socketio/pom.xml
@@ -190,6 +190,11 @@
         </dependency>
 
         <dependency>
+            <groupId>vip.isass</groupId>
+            <artifactId>kernel-net-proxy-core</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>compile</scope>
