--- a/pom.xml
+++ b/pom.xml
@@ -184,7 +184,7 @@
     <!-- 快照版格式：super.x.y.z-SNAPSHOT-->
     <groupId>vip.isass</groupId>
     <artifactId>super</artifactId>
-    <version>super.3.3.1-SNAPSHOT</version>
+    <version>super.3.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -212,7 +212,7 @@
         <module>kernel-net-netty</module>
         <module>kernel-net-socketio</module>
         <module>kernel-net-proxy-core</module>
-        <module>kernel-net-proxy-client</module>
+        <module>kernel-net-proxy-upstream</module>
         <module>super-core-protobuf</module>
         <module>super-core-elasticsearch</module>
         <module>super-core-encryption</module>
@@ -235,7 +235,7 @@
 
         <!-- region isass-core -->
 
-        <super-core.version>super.3.3.1-SNAPSHOT</super-core.version>
+        <super-core.version>super.3.4.0-SNAPSHOT</super-core.version>
 
         <!-- endregion -->
 
@@ -527,7 +527,7 @@
 
             <dependency>
                 <groupId>vip.isass</groupId>
-                <artifactId>kernel-net-proxy-client</artifactId>
+                <artifactId>kernel-net-proxy-upstream</artifactId>
                 <version>${super-core.version}</version>
             </dependency>
 
