--- a/kernel-net-proxy-service/pom.xml
+++ b/kernel-net-proxy-service/pom.xml
@@ -180,33 +180,13 @@
     </parent>
 
     <!-- 本项目信息 -->
-    <artifactId>kernel-net-websocket</artifactId>
+    <artifactId>kernel-net-proxy-service</artifactId>
     <version>super.3.4.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>vip.isass</groupId>
-            <artifactId>kernel-net-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>vip.isass</groupId>
             <artifactId>kernel-net-proxy-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>vip.isass</groupId>
-            <artifactId>super-core-protobuf</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
         </dependency>
     </dependencies>
 </project>
