--- a/super-core-web-security/pom.xml
+++ b/super-core-web-security/pom.xml
@@ -183,6 +183,10 @@
     <artifactId>super-core-web-security</artifactId>
     <version>super.3.4.0-SNAPSHOT</version>
 
+    <properties>
+        <spring-security.version>5.5.8</spring-security.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>vip.isass</groupId>
@@ -207,12 +211,28 @@
                     <groupId>org.springframework.security</groupId>
                     <artifactId>spring-security-web</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-core</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-core</artifactId>
+                </exclusion>
+            </exclusions>
+            <version>${spring-security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
             <version>${spring-security.version}</version>
         </dependency>
     </dependencies>
