--- a/isass-web/pom.xml
+++ b/isass-web/pom.xml
@@ -180,35 +180,21 @@
     </parent>
 
     <!-- 本项目信息 -->
-    <artifactId>isass-core</artifactId>
+    <artifactId>isass-web</artifactId>
     <version>4.0.0-SNAPSHOT</version>
+
+    <properties>
+    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
+            <groupId>vip.isass</groupId>
+            <artifactId>isass-core</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-models</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-        </dependency>
-
-
-        <!-- 使 logback 配置文件支持 if 条件表达式       -->
-        <dependency>
-            <groupId>org.codehaus.janino</groupId>
-            <artifactId>janino</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
+            <groupId>vip.isass</groupId>
+            <artifactId>isass-serialization-jackson</artifactId>
         </dependency>
     </dependencies>
 </project>
